--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <h2>Sign up form</h2>
     <form>
       <fieldset>
-        First name    <input id="firstName" type="text" name="" value=""><br>
-        Last name     <input id="lastName" type="text" name="" value=""><br>
-        Email         <input id="email" type="email" name="" value=""><br>
-        Date of birth <input id="dateOfBirth" type="date" name="dateOfBirth"> <br />
+        <div id="firstNameWrapper">First name    <input id="firstName" type="text" name="" value=""></div><br>
+        <div id="lastNameWrapper">Last name     <input id="lastName" type="text" name="" value=""></div><br>
+        <div id="emailWrapper">Email         <input id="email" type="email" name="" value=""></div><br>
+        <div id="dateOfBirthWrapper">Date of birth <input id="dateOfBirth" type="date" name="dateOfBirth"></div><br>
       </fieldset>
       <button class="button" type="button" name="button" onclick="nextSignUp()">Next</button>
     </form>
