--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <h2>Sign up form</h2>
     <form>
       <fieldset>
-        <div id="firstNameWrapper">First name    <input id="firstName" type="text" name="" value=""></div><br>
-        <div id="lastNameWrapper">Last name     <input id="lastName" type="text" name="" value=""></div><br>
-        <div id="emailWrapper">Email         <input id="email" type="email" name="" value=""></div><br>
-        <div id="dateOfBirthWrapper">Date of birth <input id="dateOfBirth" type="date" name="dateOfBirth"></div><br>
+        <div>First name    <input id="firstName" type="text" name="" value=""></div><br>
+        <div>Last name     <input id="lastName" type="text" name="" value=""></div><br>
+        <div>Email         <input id="email" type="email" placeholder="yourname@yourdomain.com" name="" value=""></div><br>
+        <div>Date of birth <input id="dateOfBirth" type="date" name="dateOfBirth" ></div><br>
       </fieldset>
       <button class="button" type="button" name="button" onclick="nextSignUp()">Next</button>
     </form>
@@ -40,11 +40,15 @@
   <article class="form" id="signUp2">
     <h2>Sign up form</h2>
     <form>
-      <fieldset>
-        Address <input id="address" type="text" name="" value=""><br>
-        Eircode <input id="postcode" type="text" name="" value=""><br>
-        Phone Number <input id="phoneNumber" type="text" placeholder="087-0000000"name="" value=""><br>
-      </fieldset>
+        <fieldset>
+            <label for="Gender" id="genderWrapper">Gender: </label>
+                            Not say<input type="radio" class="radio" name="genders" id="genderNot" value="notSay">
+                            Female<input type="radio" class="radio" name="genders" id="genderFemale"value="female">
+                            Male<input type="radio" class="radio" name="genders" id="genderMale" value="male"> <br>
+            <div> Phone Number <input id="phoneNumber" type="tel" placeholder="087-0000000"name="" value=""></div><br>
+            <div>Choose your password <input  id="password1" type="password"><br>
+            <div>Confirm your password <input id="password2" type="password"><br>
+        </fieldset>
       <button class="button" type="button" name="button" onclick="previousSignUp()">Back</button>
       <button class="button" type="button" name="button"  onclick="finalSignUp()">Sign up!</button>
     </form>
