--- a/index.html
+++ b/index.html
@@ -32,23 +32,24 @@
         <div>Email         <input id="email" type="email" placeholder="yourname@yourdomain.com" name="" value=""></div><br>
         <div>Date of birth <input id="dateOfBirth" type="date" name="dateOfBirth" ></div><br>
       </fieldset>
-      <button class="button" type="button" name="button" onclick="nextSignUp()">Next</button>
+      <button class="button" id="backButton" type="button" name="button" onclick="showNextSignUp()">Next</button>
     </form>
   </article>
   <article class="form" id="signUp2">
     <h2>Sign up form</h2>
     <form>
         <fieldset>
-            <label for="Gender" id="genderWrapper">Gender: </label>
-                            Not say<input type="radio" class="radio" name="genders" id="genderNot" value="notSay">
-                            Female<input type="radio" class="radio" name="genders" id="genderFemale"value="female">
-                            Male<input type="radio" class="radio" name="genders" id="genderMale" value="male"> <br>
+            <label for="Gender" id="genderWrapper">Gender:
+                            <p class="radioParagraph">Prefer not to say <input type="radio" class="radio" name="genders" id="genderNot" value="notSay"></p>
+                            <p class="radioParagraph">Female<input type="radio" class="radio" name="genders" id="genderFemale"value="female"></p>
+                            <p class="radioParagraph">Male<input type="radio" class="radio" name="genders" id="genderMale" value="male"></p> <br>
+                            </label>
             <div> Phone Number <input id="phoneNumber" type="tel" placeholder="087-0000000"name="" value=""></div><br>
             <div>Choose your password <input  id="password1" type="password"></div><br>
             <div>Confirm your password <input id="password2" type="password"></div><br>
         </fieldset>
-      <button class="button" type="button" name="button" onclick="previousSignUp()">Back</button>
-      <button class="button" type="button" name="button"  onclick="finalSignUp()">Sign up!</button>
+      <button class="button-back" type="button" name="button" onclick="showPreviousSignUp()">Back</button>
+      <button class="button" type="button" name="button"  onclick="signUp()">Sign up!</button>
     </form>
   </article>
   <article class="form" id="signIn">
