--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8" />
   <title>Registration Form</title>
   <link type="text/css"rel="stylesheet" href="style.css">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -31,27 +33,22 @@
         <div>Last name     <input id="lastName" type="text" name="" value=""></div><br>
         <div>Email         <input id="email" type="email" placeholder="yourname@yourdomain.com" name="" value=""></div><br>
         <div>Date of birth <input id="dateOfBirth" type="date" name="dateOfBirth" ></div><br>
+        <div> Phone Number <input id="phoneNumber" type="tel" placeholder="087-0000000"name="" value=""></div><br>
+        <div>Choose your password <input  id="password1" type="password"></div><br>
+        <div>Confirm your password <input id="password2" type="password"></div><br>
+        <label for="Gender" id="genderWrapper">Gender:
+                        <p class="radioParagraph">Prefer not to say <input type="radio" class="radio" name="genders" id="genderNot" value="notSay"></p>
+                        <p class="radioParagraph">Female<input type="radio" class="radio" name="genders" id="genderFemale"value="female"></p>
+                        <p class="radioParagraph">Male<input type="radio" class="radio" name="genders" id="genderMale" value="male"></p> <br>
+                        </label>
       </fieldset>
-      <button class="button" id="backButton" type="button" name="button" onclick="showNextSignUp()">Next</button>
-    </form>
-  </article>
-  <article class="form" id="signUp2">
-    <h2>Sign up form</h2>
-    <form>
-        <fieldset>
-            <label for="Gender" id="genderWrapper">Gender:
-                            <p class="radioParagraph">Prefer not to say <input type="radio" class="radio" name="genders" id="genderNot" value="notSay"></p>
-                            <p class="radioParagraph">Female<input type="radio" class="radio" name="genders" id="genderFemale"value="female"></p>
-                            <p class="radioParagraph">Male<input type="radio" class="radio" name="genders" id="genderMale" value="male"></p> <br>
-                            </label>
-            <div> Phone Number <input id="phoneNumber" type="tel" placeholder="087-0000000"name="" value=""></div><br>
-            <div>Choose your password <input  id="password1" type="password"></div><br>
-            <div>Confirm your password <input id="password2" type="password"></div><br>
-        </fieldset>
-      <button class="button-back" type="button" name="button" onclick="showPreviousSignUp()">Back</button>
       <button class="button" type="button" name="button"  onclick="signUp()">Sign up!</button>
     </form>
   </article>
+
+
+
+
   <article class="form" id="signIn">
     <h2>Sign in form</h2>
     <form>
@@ -66,6 +63,9 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha3/0.8.0/sha3.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script type="text/javascript" src="constant.js">
+
+  </script>
   <script type="text/javascript" src="scripts.js"></script>
 </body>
 </html>
