--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <div class="mainHeader">
       <div class="logo">
-        <img src="wipro-logo.png" alt="Wipro Logo ">
+        <img src="images/wipro-logo.png" alt="Wipro Logo ">
       </div>
       <div>
         <h1 class="title">Welcome to the Wipro portal</h1>
@@ -25,7 +25,7 @@
     </div>
   </header>
 <div class="wrapper">
-  <article class="form" id="signUp1">
+  <article class="form" id="signUp">
     <h2>Sign up form</h2>
     <form>
       <fieldset>
